Close #81: Add slide show
Former-commit-id: 259b6a8bcc45dcd709b752700b321fd9e1433a99 [formerly e7767aa37c11390118ec72f670440e2f805c0fda]
Former-commit-id: 22775aad38c56ed75b752422d9702e56f7b1aeaf

--- a/ExViewer/Views/ImagePage.xaml
+++ b/ExViewer/Views/ImagePage.xaml
@@ -566,10 +566,13 @@
         </AppBarButton>
         <AppBarSeparator />
         <AppBarButton x:Name="_AbbSlide"
-                      Icon="SlideShow"
-                      Label="Play"
-                      Click="_AbbSlide_Click"
-                      ToolTipService.ToolTip="{x:Bind _AbbSlide.Label, Mode=OneWay}" />
+                      Label="{x:Bind local:ImagePage._GetSlideLabel(_SlideTimer.IsEnabled), Mode=OneWay}"
+                      ToolTipService.ToolTip="{x:Bind local:ImagePage._GetSlideLabel(_SlideTimer.IsEnabled), Mode=OneWay}"
+                      Click="_AbbSlide_Click">
+          <AppBarButton.Icon>
+            <FontIcon Glyph="{x:Bind local:ImagePage._GetSlideSymbol(_SlideTimer.IsEnabled), Mode=OneWay}" />
+          </AppBarButton.Icon>
+        </AppBarButton>
       </CommandBar.SecondaryCommands>
     </CommandBar>
     <Border x:Name="bdBottom"
