--- a/ExViewer/Controls/AboutControl.xaml
+++ b/ExViewer/Controls/AboutControl.xaml
@@ -249,8 +249,8 @@ M0.1,49.9h1.8l0.8-3.3h2.9L6,45.2H3.1l0.5-2.1h3.1l0.4-1.7h-5L0.1,49.9z M8,49.9l0.
                      x:Uid="Controls/AboutControl/ChineseTagProviderHyperlinkButton"
                      XYFocusUp="{x:Bind btnUpdateEt}"
                      XYFocusDown="{x:Bind btnUpdateEht}"
-                     Content="Mapaler / EhTagTranslator @ GitHub.com"
-                     NavigateUri="https://github.com/Mapaler/EhTagTranslator"
+                     Content="EhTagTranslation / Database @ GitHub.com"
+                     NavigateUri="https://github.com/EhTagTranslation/Database"
                      Style="{StaticResource AboutControlHyperLinkButtonStyle}" />
     <StackPanel Orientation="Horizontal">
       <TextBlock xmlns:eht="using:EhTagTranslatorClient"
