use showpage api
Former-commit-id: fb049708882b3a688d84c94aa26c43d271c28981 [formerly fe6f6c325e805c86c677ca306f45ffd3a14e8085]
Former-commit-id: 35be1490f2ee9905e364f0e7a44da661606f182f

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -387,7 +387,7 @@
                            MaxHeight="200"
                            Source="{x:Bind Thumb, Mode=OneWay}"
                            ToolTipService.Placement="Right"
-                           ToolTipService.ToolTip="{x:Bind PageID, Mode=OneWay}" />
+                           ToolTipService.ToolTip="{x:Bind PageId, Mode=OneWay}" />
                   </DataTemplate>
                 </GridView.ItemTemplate>
               </GridView>
