--- a/ApplicationDataManager/Settings/Xaml/DefaultTemplateProvider.xaml
+++ b/ApplicationDataManager/Settings/Xaml/DefaultTemplateProvider.xaml
@@ -3,10 +3,12 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="using:ApplicationDataManager.Settings.Xaml"
                     xmlns:settings="using:ApplicationDataManager.Settings">
-  <local:EmptyConverter x:Name="Conv" />
+  <local:DefaultConverter x:Name="Conv" />
+  <local:InputScopeConverter x:Name="InputScopeConverter" />
   <DataTemplate x:Name="String"
                 x:DataType="settings:SettingInfo">
     <TextBox Text="{x:Bind Value, Mode=TwoWay, Converter={StaticResource Conv}}"
+             InputScope="{x:Bind PropertyType, Converter={StaticResource InputScopeConverter}}"
              AcceptsReturn="{x:Bind ((settings:TextTemplateAttribute)ValueRepresent).MultiLine, FallbackValue=false}"
              MinHeight="50">
       <TextBox.Header>
