change watched icon
Former-commit-id: c0f573b4ada064b432fe38a613c30897ddb74d42 [formerly 9f803b9820c797460331d5d0271ab46f81b131d9]
Former-commit-id: c360fbc6fbe97ba6907d01daa33b7ffc8773292c

--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -211,7 +211,7 @@
                                      AccessKey="W"
                                      XYFocusUp="{x:Bind btn_UserInfo}">
                 <controls:SplitViewTab.Icon>
-                  <FontIcon Glyph="&#xE7B3;"
+                  <FontIcon Glyph="&#xE006;"
                             FontSize="16" />
                 </controls:SplitViewTab.Icon>
               </controls:SplitViewTab>
