localization info for igneous
Former-commit-id: d625e13b149192f267d17178e83cf0dd7d170ae7 [formerly a10d6845d33a1c29b261782cd44cc962e400ea48]
Former-commit-id: bd05b6a22f5f1bb3a4d9bf2f6743419c4ee4c76a

--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -82,6 +82,14 @@
                tke:TextBoxRegex.Regex="^[0-9a-fA-F]{32}$"
                Header="ipb_pass_hash"
                Text="{x:Bind VM.PassHash, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+               Margin="0,12,0,0"
+               TextChanged="cookie_TextChanged" />
+      <TextBox x:Name="tbIgneous"
+               x:Uid="Views/LogOnDialog/IgneousTextBox"
+               tke:TextBoxRegex.ValidationMode="Normal"
+               tke:TextBoxRegex.Regex="^[0-9a-fA-F]{0,32}$"
+               Header="igneous"
+               Text="{x:Bind VM.Igneous, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                Margin="0,12"
                TextChanged="cookie_TextChanged" />
       <TextBlock x:Name="tbErrMsg"
