show uploader name
Former-commit-id: 3d3307a8834a2441dff6568b673895235095dcd1 [formerly db343a54ce4b1fd07a14258d902f29e72680f1fd]
Former-commit-id: 15ddc76b55d69765e4ab8fb539aaed0f468b3a92

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -19,6 +19,7 @@
                 x:Name="page"
                 xmlns:xb="using:Opportunity.UWP.Converters.XBind"
                 xmlns:sys="using:System"
+                xmlns:ev="using:ExViewer"
                 Loading="page_Loading"
                 Loaded="page_Loaded"
                 Unloaded="page_Unloaded"
@@ -566,7 +567,8 @@
         <AppBarButton x:Uid="Views/GalleryPage/SearchUploaderAppBarButton"
                       Command="{x:Bind xb:Command.Delay(ViewModel.SearchUploader, 250), Mode=OneWay}"
                       Icon="ContactInfo"
-                      Label="Search uploader" />
+                      Label="{x:Bind ev:Strings.Resources.Views.GalleryPage.Uploader(ViewModel.Gallery.Uploader), Mode=OneWay}"
+                      ToolTipService.ToolTip="Search uploader" />
         <AppBarButton x:Uid="Views/GalleryPage/RenameAppBarButton"
                       Command="{x:Bind ViewModel.Rename, Mode=OneWay}"
                       Icon="Rename"
