Add some error message
Former-commit-id: e88aa6b80e879fcd7e7d371f536fede28f772f45 [formerly acdddb481c8b35b6df8bddaee4e295e48e9944e0]
Former-commit-id: 37f59d505b4bde2912a5e316ca1a2b6220afbc81

--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -87,7 +87,7 @@
       <TextBox x:Name="tbIgneous"
                x:Uid="Views/LogOnDialog/IgneousTextBox"
                tke:TextBoxRegex.ValidationMode="Normal"
-               tke:TextBoxRegex.Regex="^[0-9a-fA-F]{0,32}$"
+               tke:TextBoxRegex.Regex="^[0-9a-fA-F]*$"
                Header="igneous"
                Text="{x:Bind VM.Igneous, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                Margin="0,12"
